# iced_file_tree

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dir.rs  err.rs  errentry.rs  file.rs  file_tree.rs  folder.rs  lib.rs
