[package]
name = "iced_file_tree"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A lightweight file tree widget for the iced toolkit."
repository = "https://github.com/edwloef/iced_file_tree"
readme = "README.md"
categories = ["gui"]
rust-version = "1.82"

[dependencies]
iced = { version = "0.13.1", default-features = false, features = [
    "advanced",
    "svg",
] }

[lints.rust]
let-underscore = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
rust-2018-idioms = "warn"
rust-2024-compatibility = "warn"
unused_crate_dependencies = "warn"
unused_qualifications = "warn"

# https://github.com/rust-lang/rust/issues/133167
if-let-rescope = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
float-cmp = "allow"
struct_field_names = "allow"

nursery = { level = "warn", priority = -1 }
missing-const-for-fn = "allow"

allow_attributes = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
get_unwrap = "warn"
lossy_float_literal = "warn"
manual_is_power_of_two = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
print_stdout = "warn"
print_stderr = "warn"
pub_without_shorthand = "warn"
semicolon_inside_block = "warn"
separated_literal_suffix = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
unused_trait_names = "warn"
